css/style.css
.intros {
    font-family: 'Montserrat', sans-serif;
}

#big-text {
    font-size: 8.5vw;
    font-weight: bolder;
    min-width: 25%;
}

#big-text2 {
    font-size: 5vw;
    font-weight: bolder;
    min-width: 25%;
}

#small-text {
    font-size: 2vw;
}

.card-title {
    padding: 0;
    margin-bottom: 0px;
}

.spacer {
    margin-top: 25vh;
    margin-bottom: 25vh;
}

.small-spacer {
    margin-top: 5vh;
    margin-bottom: 5vh;
}

.title-body-spacer {
    margin-top: 2.5vh;
    margin-bottom: 2.5vh;
}

.card-deck {
    width: 100%;
}

.project-title {
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.white-drop {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 30px 0 rgba(59, 59, 59, 0.19);
}

.bg-gradient-btn {
    background: rgb(91, 173, 255);
    background: radial-gradient(circle, rgba(91, 173, 255, 1) 0%, rgba(92, 62, 255, 1) 100%);
}

.button-spacer {
    padding-top: .3rem;
    padding-bottom: .3rem;
    margin-top: .5rem;
    margin-bottom: .5rem;
    float: inline-end;
    transition: transform 1s;
}

.img-drop-big {
    filter: drop-shadow(8px 8px 10px gray);
    border-radius: 10%;
}

.card-deck {
    margin: 0;
}

.project-card {
    padding: 0;
}

.project-img-size {
    height: 12rem;
    width: 82%;
    margin-right: 9%;
    margin-left: 9%;
}

.img-bg {
    background-color: lightseagreen;
}

.button-spacer:hover {
    transform: scale(1.05);
}

img {
    transition: transform 1s;
}

img:hover {
    transform: scale(1.05);
}

.top-bottom-bg {
    background: rgb(55, 155, 255);
    background: linear-gradient(90deg, rgba(55, 155, 255, 1) 0%, rgba(92, 62, 255, 1) 100%);
}

.link-color {
    color: black;
}

.footer-card {
    background-color: white;
    margin: auto;
    margin-top: 5rem;
    margin-bottom: 5rem;
}

.header-font-logo {
    font-family: 'Bebas Neue', cursive;
    font-size: 3rem;
}

.header-font-other {
    font-family: 'Bebas Neue', cursive;
    font-size: 2rem;
}

.header-links {
    color: #2c227f;
}

.header-list {
    list-style-type: none;
}

.main-small-text {
    font-size: 1.5vw;
}

.no-bg {
    background-color: transparent;
}

